# quandura-ateams

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_tables.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  executor.py  judge.py  librarian.py  triage.py
backend/app/agents/teams/: __init__.py  basic.py
backend/app/agents/teams/legal_research/: __init__.py  schemas.py
backend/app/api/: __init__.py  memory.py  missions.py  schemas.py
backend/app/core/: __init__.py  config.py  redis.py
backend/app/db/: __init__.py  base.py  models.py
backend/app/memory/: __init__.py  embeddings.py  queries.py  storage.py
backend/app/models/: __init__.py  memory.py  passport.py
backend/app/platform/: __init__.py  checkpointer.py  orchestrator.py
frontend/: package.json
planning/: BUILD_CONSIDERATIONS.md  BUILD_KNOWLEDGE.md  BUILD_PLAN.md  ENTERPRISE_PLAN.md  HANDOFF.md  HANDOFF_20250108.md  INSPECTION_APP_COMPLETE.md  MEMORY_SYSTEM.md  PARALLEL_DEV.md  QUANDURA_ARCHITECTURE.md  SYNTHESIS.md  WHITEPAPER.md
planning/field-app/: FIELD_APP_SPEC.md  MEMORY_INTEGRATION.md  Quandura Inspection App Flow.pptx  Quandura Inspection App.docx
planning/research/: DECISION_LOG.md  GHOST_TOWN.md  README.md  SCENARIO_OHS_INSPECTION.md  UNIQ_EXAMPLES.md  UNIQ_SPEC.md  token_count.py  uniq_benchmark.py
planning/teams/: SAFETY_TEAM.md  (+1 more)
research/: ARCHITECTURE_RESEARCH.md  COMPLIANCE_RESEARCH.md  VOICE_RESEARCH.md
